# skill-installer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml  skill_installer.py
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-04-03-skill-installer.md  2026-04-04-packaging.md
docs/superpowers/specs/: 2026-04-03-skill-installer-design.md  2026-04-04-packaging-design.md
tests/: test_installer.py  test_url_parser.py
