[project]
name = "skill-installer"
version = "0.1.9"
description = "Install Claude Code skills from GitHub"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
skill-install = "skill_installer:main"
ski = "skill_installer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
